[project]
name = "aecg"
version = "0.1.2"
description = "Python parser and viewer for Annotated ECG HL7 files"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ghiles Meddour", email = "ghiles.meddour.b@gmail.com" }]
dependencies = [
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic-xml>=2.19.0",
    "pydantic>=2.9.2",
    "python-benedict[xml]>=0.34.0",
]

[project.optional-dependencies]
dev = ["coverage>=7.13.3", "devtools>=0.12.2", "pytest>=9.0.2", "ruff>=0.15.0"]

[project.urls]
Repository = "https://github.com/ghilesmeddour/aecg"
Documentation = "https://github.com/ghilesmeddour/aecg"
Changelog = "https://github.com/ghilesmeddour/aecg/blob/main/CHANGELOG.md"
Releases = "https://github.com/ghilesmeddour/aecg/releases"

[tool.setuptools]
packages = ["aecg"]

[tool.uv]
required-version = ">=0.8.20"
